# W25_CS489_Project

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  docker-compose.live.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  lint-frontend.yaml  owasp.yaml  test-backend.yaml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  app.py  pyproject.toml
backend/envs/: common.env  dev.env  live.env  prod.env  secrets.env
backend/scripts/: dev.sh  prod.sh  revision.sh
backend/src/: __init__.py  app.py  base.py  email.py  envs.py  extensions.py  mod_seed.sql  models.py  routes.py  seed.py  seed.sql
backend/src/auth/: login_routes.py  moderation_routes.py  post.py  registration_routes.py  report.py  routes.py  ticket.py  user.py  verification_routes.py  vote.py
backend/src/dashboard/: dashboard_routes.py
backend/src/fuzz/: fuzz.py
backend/src/fuzz/data/crypto/seeds/: starter
backend/src/migrations/: 1740202574_initial_commit.py  1740271794_add_user_model.py  1740271902_add_default_uuids.py  1740791023_add_verification_models.py  1740937741_nvm.py  1740940966_idk.py  1743206591_add_is_moderator_to_user_model.py  1743229314_add_user_deleted_at.py  1743274596_added_report_model.py  1743278760_fix_report_foreign_key_types.py  1743279912_add_moderator_schemas.py  1743289688_added_deleted_at_to_posts.py  1743388771_add_missing_report_fields.py
backend/src/posts/: post.py  post_ai.py  post_routes.py
backend/tests/: test_crypto.py  test_escape_html.py  test_moderation.py  test_smoke.py  test_stub.py  test_validate_email.py
db/envs/: secrets.env
envs/: dev.env  prod.env
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: constants.ts  globals.css  layout.tsx  page.tsx
frontend/scripts/: dev.sh
nginx/: Dockerfile  Dockerfile.live  Dockerfile.prod  nginx.conf
scripts/: fuzz.sh
(+28 files in other folders)
